-Installed Guna package and Renamed the file

--- a/Final Project.csproj
+++ b/Final Project.csproj
@@ -9,4 +9,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.6" />
+  </ItemGroup>
+
 </Project>
